--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link href="style.css" rel="stylesheet">
     <title>Simple Contact Form</title>
 </head>
 <body>
-    
+    <form class="form">
+        <h2 class="form__title">Contact Us</h2>
+        <input class="form__name input" placeholder="Nombre" type="text">
+        <input class="form__email input" placeholder="Email" type="email">
+        <textarea class="form__message input" placeholder="Message"></textarea>
+        <input class="form__submit" type="submit">
+
+    </form>
 </body>
 </html>
