--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/icons8-formulario-50.png" type="image/x-icon">
     <title>Simple Contact Form</title>
 </head>
 <body>
